[metadata]
name=niftypad
description=Neuroimaging for the Prevention of Alzheimer's Disease
long_description=file: README.rst
long_description_content_type=text/x-rst
license=Apache 2.0
license_file=LICENSE
url=https://github.com/AMYPAD/NiftyPAD
project_urls=
    Changelog=https://github.com/AMYPAD/NiftyPAD/releases
    Documentation=https://github.com/AMYPAD/NiftyPAD/#NiftyPAD
author=Jieqing Jiao
author_email=jieqing.jiao@gmail.com
maintainer=Casper da Costa-Luis
maintainer_email=imaging@cdcl.ml
platforms=any
provides=niftypad
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Medical Science Apps.
[options]
install_requires=
    matplotlib
    nibabel
    numpy
    scikit-learn
packages=find:
python_requires=>=3.6
[options.extras_require]
dev=
[options.entry_points]
console_scripts=
    niftypad=niftypad.cli:main
[options.packages.find]
exclude=examples,tests

[yapf]
spaces_before_comment=15, 20
arithmetic_precedence_indication=true
allow_split_before_dict_value=false
coalesce_brackets=True
column_limit=99
each_dict_entry_on_separate_line=False
space_between_ending_comma_and_closing_bracket=False
split_before_named_assigns=False
split_before_closing_bracket=False

[isort]
profile=black
line_length=99
known_first_party=niftypad,tests

[flake8]
statistics=True
max_line_length=99
extend-ignore=E231,E261
exclude=.git,__pycache__,build,dist,.eggs
